# lib/api-spec/openapi.yaml
@@ -852,6 +852,10 @@ components:
           type: string
         order:
           type: number
+        isPreviousExec:
+          type: boolean
+        academicYear:
+          type: string
       required:
         - id
         - name
@@ -884,6 +888,10 @@ components:
           type: string
         order:
           type: number
+        isPreviousExec:
+          type: boolean
+        academicYear:
+          type: string
       required:
         - name
         - position
